Add Groovy to sh
